[package]
name = "udp-conditioner-proxy"
version = "0.3.0"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "Simple UDP proxy to simulate network conditions"
repository = "https://github.com/pierd/udp-conditioner-proxy"
homepage = "https://github.com/pierd/udp-conditioner-proxy"
keywords = ["networking", "udp"]
categories = ["network-programming"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
flume = { version = "0.12.0", features = ["async"] }
rand = "0.10.2"
tokio = { version = "1.53.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"]}
